# rust-oura-api

./: Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-2-link
src/: lib.rs  main.rs  models.rs
tests/: oura_api.rs
tests/fixtures/: get_daily_activity.json  get_daily_readiness.json  get_daily_sleep.json  get_daily_spo2.json  get_personal_info.json  get_read_mode_period.json  get_ring_configuration.json  get_session.json  get_sleep.json  get_sleep_time.json  get_tag.json  get_tag_v2.json  get_workout.json  list_daily_activity.json  list_daily_readiness.json  list_daily_sleep.json  list_daily_spo2.json  list_heart_rate.json  list_rest_mode_period.json  list_ring_configuration.json  list_session.json  list_sleep.json  list_sleep_time.json  list_tag.json  list_tag_v2.json  list_workout.json
